<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="msg_please_wait">Please Wait…</string>
    <string name="error_general">Something went wrong</string>
    <string name="error_check_internet_connection">Please connect to the internet</string>
    <string name="error_app_is_not_installed">Softpos app is not installed!</string>
    <string name="login_hello">Hello!</string>
    <string name="login_please_login">Please Login</string>
    <string name="valid_password_rules">Password must contain 6 letters and numbers at least</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="button_login">Login</string>
    <string name="text_logestechs">LOGESTECHS</string>
    <string name="power_beyond_cargo">POWER BEYOND CARGO</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_company_name">Company Name</string>
    <string name="dashboard_packages_number">Packages Number</string>
    <string name="dashboard_packages_number_sprint">Packages Number</string>
    <string name="dashboard_delivered">Delivered</string>
    <string name="dashboard_cod_sum">COD\nSum</string>
    <string name="dashboard_mass_cod_reports_sum">Mass COD Reports Sum</string>
    <string name="dashboard_driver_earnings_sum">Total Driver Earning</string>
    <string name="dashboard_scan_new_package_barcode">Scan New\nBarcodes</string>
    <string name="dashboard_scan_new_package_barcode_sprint">Scan New\nBarcodes</string>
    <string name="dashboard_accepted_packages">Accepted\nPackages</string>
    <string name="dashboard_accepted_packages_sprint">Accepted\nPackages</string>
    <string name="dashboard_pending_packages">Pending\nPackages</string>
    <string name="dashboard_pending_packages_sprint">Pending\nPackages</string>
    <string name="dashboard_in_car_packages">In Car\nPackages</string>
    <string name="dashboard_in_car_packages_sprint">In Car\nPackages</string>
    <string name="dashboard_failed">Failed</string>
    <string name="dashboard_failed_sprint">Failed</string>
    <string name="dashboard_postponed">Postponed</string>
    <string name="dashboard_other_options">Other Options</string>
    <string name="dashboard_mass_cod_reports">Mass Reports</string>
    <string name="dashboard_mass_cod_reports_sprint">Mass Reports</string>
    <string name="dashboard_sort_on_shelves">Sort on Shelves</string>
    <string name="dashboard_unload_from_customer">Unload Packages</string>
    <string name="dashboard_unload_container">Unload from Driver</string>
    <string name="dashboard_find_packages">Find Package</string>
    <string name="dashboard_sort_bins_into_locations">Sort Bins Into Locations</string>
    <string name="dashboard_sort_items_into_bins">Sort Items Into Bins</string>
    <string name="dashboard_sort_items">Sort Items</string>
    <string name="item_details">Item Details</string>
    <string name="error_insert_valid_password">Password should contain at lease 6 characters or numbers</string>
    <string name="error_insert_valid_email">Please insert a valid email</string>
    <string name="error_fill_all_mandatory_fields">Please fill all required fields</string>
    <string name="packages_view_pager_accepted_packages">Accepted Packages</string>
    <string name="packages_view_pager_accepted_packages_sprint">Accepted Packages</string>
    <string name="packages_view_pager_pending_packages">Pending Packages</string>
    <string name="packages_view_pager_in_car_packages">In Car Packages</string>
    <string name="packages_view_pager_in_car_packages_sprint">In Car Packages</string>
    <string name="packages_view_pager_delivered">Delivered</string>
    <string name="button_accept">Accept</string>
    <string name="title_package">Package</string>
    <string name="title_packages">Packages</string>
    <string name="title_reject_customer_packages">Reject Customer Packages</string>
    <string name="title_reject_package">Reject Package</string>
    <string name="message_no_packages">No packages were found \n Please pull the list down to refresh</string>
    <string name="message_no_checkins">No check-ins were found \n Please pull the list down to refresh</string>
    <string name="success_mass_completed">Mass COD Report Has Been Delivered Successfully</string>
    <string name="success_operation_completed">Operation Completed Successfully</string>
    <string name="button_insert_barcode">Insert Barcode</string>
    <string name="out_of_delivery">Out Of Delivery</string>
    <string name="title_scanned_packages">Scanned Packages</string>
    <string name="title_scanned_packages_sprint">Scanned Packages</string>
    <string name="title_shelf">Shelf Cities</string>
    <string name="button_done">Done</string>
    <string name="button_scan_tote">Scan Tote</string>
    <string name="error_phone_permission">The app needs phone permission</string>
    <string name="button_scan_packages_barcodes">Scan Packages Barcodes</string>
    <string name="button_scan_packages_barcodes_sprint">Scan Packages Barcodes</string>
    <string name="cod">COD</string>
    <string name="button_deliver_package">Deliver Package</string>
    <string name="button_deliver_package_sprint">Deliver Package</string>
    <string name="button_deliver_mass_cod">Deliver COD</string>
    <string name="action_return_package">Return</string>
    <string name="action_postpone_package">Postpone</string>
    <string name="action_view_attachment">View Attachment</string>
    <string name="action_fail_delivery">Fail Delivery</string>
    <string name="title_fail_delivery">Fail Delivery</string>
    <string name="change_package_type">Change Package Type</string>
    <string name="change_package_weight">Change Package Weight</string>
    <string name="change_package_type_sprint">Change Package Type</string>
    <string name="change_package_cod">Change Package COD</string>
    <string name="add_note">Add Note</string>
    <string name="add_note_hint">Add Your Note Here</string>
    <string name="in_car_status_to_deliver">To Deliver</string>
    <string name="in_car_status_all">All</string>
    <string name="in_car_status_failed">Failed</string>
    <string name="in_car_status_failed_sprint">Failed</string>
    <string name="in_car_status_postponed">Postponed</string>
    <string name="in_car_status_returned">Returned</string>
    <string name="in_car_status_cod">COD</string>
    <string name="view_mode_districts">Districts</string>
    <string name="view_mode_packages">Packages</string>
    <string name="view_mode_packages_sprint">Packages</string>
    <string name="view_mode_vendors">Vendors</string>
    <string name="view_mode_receivers">Receivers</string>
    <string name="view_mode">View Mode</string>
    <string name="status">Status</string>
    <string name="insert_barcode_for_pickup">Insert Barcode For Pickup</string>
    <string name="button_pickup">Pickup</string>
    <string name="barcode">Barcode</string>
    <string name="title_return">Return</string>
    <string name="title_please_select_reason">Please select a reason</string>
    <string name="receiver_paid_cost">Receiver paid costs</string>
    <string name="error_insert_message_text">Please insert message text</string>
    <string name="title_postpone">Postpone</string>
    <string name="title_attachments">Attachments</string>
    <string name="title_package_content">Package Content</string>
    <string name="error_select_postpone_date">Please select postpone date</string>
    <string name="package_type_cod">COD</string>
    <string name="package_type_regular">Prepaid</string>
    <string name="package_type_swap">Swap</string>
    <string name="package_type_bring">Bring</string>
    <string name="title_change_cod">Change COD</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_search">Search</string>
    <string name="title_insert_search_word">Please insert search word</string>
    <string name="title_insert_item_quantity">Please insert item quantity</string>
    <string name="hint_search_word">Search Word</string>
    <string name="hint_quantity">Quantity</string>
    <string name="title_sign_below">Please sign below</string>
    <string name="button_add_image">Add Image</string>
    <string name="text_full_delivery">Full Delivery</string>
    <string name="text_partial_delivery">Partial Delivery</string>
    <string name="payment_type_cash">Cash</string>
    <string name="payment_type_cheque">Cheque</string>
    <string name="payment_type_inter_pay">InterPay</string>
    <string name="payment_type_near_pay">NearPay</string>
    <string name="payment_type_click_pay">ClickPay</string>
    <string name="payment_type_bank_transfer">Bank Transfer</string>
    <string name="payment_type_prepaid">Prepaid</string>
    <string name="payment_type_digital_wallet">Digital Wallet</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="payment_type_card_payment">Card Payment</string>
    <string name="title_partial_delivery_note">Please enter partial delivery reason and collected COD</string>
    <string name="title_partial_delivery_cod">Collected COD:</string>
    <string name="title_partial_delivery_items_flow">Please enter partial delivery reason</string>
    <string name="error_enter_partial_delivery_note">Please enter partial delivery reason and collected COD</string>
    <string name="title_delivered_items">Please choose the delivered items</string>
    <string name="error_no_delivered_items">Please choose the delivered items</string>
    <string name="error_image_capture_failed">Image capture failed</string>
    <string name="error_image_loading">Image loading failed</string>
    <string name="button_capture_image">Capture Image</string>
    <string name="button_load_image">Load Image</string>
    <string name="error_enter_signature">Please insert a signature</string>
    <string name="button_logout">Logout</string>
    <string name="error_camera_and_storage_permissions">The app needs camera and storage permissions</string>
    <string name="error_package_not_verified">Needs to verify the package, try again!</string>
    <string name="error_wrong_package">Wrong Package</string>
    <string name="title_delivered_packages">Delivered Packages</string>
    <string name="error_no_packages_for_delivery">There are no packages for delivery</string>
    <string name="title_returned_packages">Returned Packages</string>
    <string name="title_returned_packages_sprint">Returned Packages</string>
    <string name="title_returned_packages_to_customer">Returned Packages (to customer)</string>
    <string name="title_returned_packages_to_hub">Returned Packages (to hub)</string>
    <string name="title_returned_bundles">Returned Bundles</string>
    <string name="title_brought_packages">Brought Packages</string>
    <string name="hint_phone_number">Mobile Number</string>
    <string name="hint_address">Address</string>
    <string name="hint_address_description">Address Description</string>
    <string name="done">Done</string>
    <string name="button_exit">Exit</string>
    <string name="hint_driver_name">Driver Name</string>
    <string name="title_fill_driver_info">Please fill driver information</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="change_phone_number">Change mobile number</string>
    <string name="new_phone_number">New mobile number</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeated password</string>
    <string name="verify">Verify</string>
    <string name="show_package_content">Show package content</string>
    <string name="show_telecom_package_details">Show Telecom Details</string>
</resources>