<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_return_package"
        android:title="@string/action_return_package" />

    <item
        android:id="@+id/action_postpone_package"
        android:title="@string/action_postpone_package" />

    <item
        android:id="@+id/action_view_attachment"
        android:title="@string/action_view_attachment" />

    <item
        android:id="@+id/action_edit_package_type"
        android:title="@string/change_package_type" />

    <item
        android:id="@+id/action_edit_package_weight"
        android:title="@string/change_package_weight" />

    <item
        android:id="@+id/action_edit_package_cod"
        android:title="@string/change_package_cod" />

    <item
        android:id="@+id/action_fail_delivery"
        android:title="@string/action_fail_delivery" />

    <item
        android:id="@+id/action_add_note"
        android:title="@string/add_note" />

    <item
        android:id="@+id/action_show_package_content"
        android:title="@string/show_package_content" />

    <item
        android:id="@+id/show_telecom_package_details"
        android:title="@string/show_telecom_package_details" />

</menu>
