<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="-50dp"
            android:background="@drawable/background_dialog_circle_gray"
            android:clipChildren="false"
            android:elevation="3dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_status_filter_white"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/beige_serenade"
            android:orientation="vertical"
            app:cardCornerRadius="10dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_close_white" />

                <TextView
                    style="@style/LogesTechsMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/status"
                    android:textColor="@color/fontTrackHint" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="horizontal">

                    <com.logestechs.driver.utils.customViews.StatusSelector
                        android:id="@+id/selector_to_deliver"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:textStatus="@string/in_car_status_to_deliver" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="horizontal">

                    <com.logestechs.driver.utils.customViews.StatusSelector
                        android:id="@+id/selector_all"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        app:textStatus="@string/in_car_status_all" />

                    <com.logestechs.driver.utils.customViews.StatusSelector
                        android:id="@+id/selector_failed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:textStatus="@string/in_car_status_failed" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <com.logestechs.driver.utils.customViews.StatusSelector
                        android:id="@+id/selector_postponed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        app:textStatus="@string/in_car_status_postponed" />

                    <com.logestechs.driver.utils.customViews.StatusSelector
                        android:id="@+id/selector_cod"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:textStatus="@string/in_car_status_cod" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_done"
                    style="@style/LogesTechsMedium"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background_logestechs_button"
                    android:text="@string/button_done"
                    android:textColor="#fff" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>