<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="-50dp"
            android:background="@drawable/background_dialog_circle_gray"
            android:clipChildren="false"
            android:elevation="3dp">

            <ImageView
                android:id="@+id/icon_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_mobile_white"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_edit_cod_dialog_bottom"
            android:clipChildren="false"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_close_white" />

                <TextView
                    android:id="@+id/title_change"
                    style="@style/LogesTechsMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/change_phone_number"
                    android:textColor="@color/fontTitleBlack"
                    android:textSize="18sp" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/container_mobile_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.logestechs.driver.utils.customViews.OutlinedFormEditText
                    android:id="@+id/et_new_mobile"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    app:hintText="@string/new_phone_number"
                    app:isNumeric="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_password_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.logestechs.driver.utils.customViews.OutlinedEditText
                    android:id="@+id/et_old_password"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    app:hintText="@string/old_password"
                    app:isPassword="true"/>

                <com.logestechs.driver.utils.customViews.OutlinedEditText
                    android:id="@+id/et_new_password"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    app:hintText="@string/new_password"
                    app:isPassword="true"/>

                <com.logestechs.driver.utils.customViews.OutlinedEditText
                    android:id="@+id/et_repeat_password"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    app:hintText="@string/repeat_new_password"
                    app:isPassword="true"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_done"
                style="@style/LogesTechsMedium"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_logestechs_button"
                android:text="@string/done"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

</layout>